# python-otel-example

./: .gitignore  README.md  devspace.yaml  main.py  new.py  pyproject.toml  test.py
detailed/: README.md  __init__.py  log.py  pyproject.toml
go-echo/: README.md  echo.go  go.mod  go.sum  log.go  main.go  otel.go  slog.go
go-minimal/: README.md  devspace.yaml  go.mod  go.sum  log.go  main.go  otel.go
go-simple/: README.md  devspace.yaml  go.mod  go.sum  main.go
python-fastapi/: __init__.py  devspace.yaml  log.py  otel.py  pyproject.toml
python-simple/: devspace.yaml  main.py
simple/: pyproject.toml
